<resources>
    <string name="facebook_app_id">1800454203530890</string>
    <string name="app_name">NuBloca</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Termeni și condiții</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="app_title">NuBloca</string>
    <string name="tos">TOS CLEAN</string>
    <string name="menu2">admin2</string>
    <string name="menu3">admin3</string>
    <string name="acord">De acord</string>
    <string name="refuz">Refuz</string>
    <string name="tos_esti_sigur"> Ești sigur că ai citit tot textul?</string>
    <string name="termeni">Termeni și condiții</string>
    <string name="tos_text2">Aplicația poate funcționa doar dacă accepți Termenii si Condițiile de Utilizare.
        \n \n Te asigurăm că aceștia sunt în concordanța cu legile statului român.</string>
    <string name="title_activity_ecran2">Inscrie auto</string>
    <string name="title_activity_ecran5">Ecran5Activity</string>
    <string name="title_activity_screen">Screen</string>
    <string name="vezi_termeni">Vezi Termeni si Condiții</string>
    <string name="inchide_app">Închide aplicația</string>
    <string name="background">Background</string>
    <string name="car_background">car background</string>
    <string name="actionbar_main">main actionbar</string>
    <string name="small_car">small car</string>
    <string name="contacteaza_proprietar_auto">Contactează proprietar auto</string>
    <string name="plus_sign">plus sign</string>
    <string name="adauga_numarul_masinii_tale">Adaugă numărul mașinii tale</string>
    <string name="title_activity_ecran0">Conexiune internet</string>
    <string name="title_activity_ecran6">Abonament expirat</string>
    <string name="title_activity_ecran9">Despre</string>
    <string name="title_activity_ecran8">Setări</string>
    <string name="title_activity_ecran10">Contact</string>
    <string name="title_activity_ecran11">Ajutor</string>
    <string name="title_activity_ecran29">Limbă Aplicației</string>
    <string name="title_activity_ecran12">Termeni si condiții</string>
    <string name="title_activity_ecran13">Sfat</string>
    <string name="title_activity_ecran16">Autovehiculele tale</string>
    <string name="title_activity_ecran20">Contact auto</string>
    <string name="title_activity_ecran22">Mesaje Standard</string>
    <string name="title_activity_ecran23">Tip înmatriculare</string>
    <string name="title_activity_ecran24">Istoric numere</string>
    <string name="title_activity_ecran25">Alege țara</string>
    <string name="title_activity_ecran26">Exemplu</string>
    <string name="title_activity_ecran27">Mesaj întreg</string>
    <string name="title_activity_ecran28">Propune mesaj</string>
    <string name="nav_drawer_menu_setari">Setări</string>
    <string name="nav_drawer_menu_despre">Despre</string>

    <string name="trimite">Trimite</string>
    <string name="ok">OK</string>
    <string name="tos_bot_text">Data acceptării: 20 Noiembrie 2016</string>

    <!--******-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--string ecran2 <=> Inscrie Auto-->
    <string name="inscrie_auto_title1">Anulati</string>
    <string name="inscrie_auto_title2">Inscrie Auto</string>
    <string name="inscrie_auto_title3">OK</string>
    <string name="inscrie_ecran2">Inscrie numărul mașinii tale:</string>
    <string name="nuAmMasina_ecran2">Nu am mașină</string>

    <!--string ecran3 <=> Termeni si Conditii-->
    <string name="termeni_si_conditii_title1">Termeni si Conditii</string>
        <string name="termeni_si_conditii_tos_text">Lorem ipsum dolor sit amet, facilis sensibus intellegebat ex quo, et tale duis per. An odio reformidans intellegebat ius, etiam oratio abhorreant usu ei. In officiis gubergren honestatis vim. Omnis putant option pri ei, libris deterruisset delicatissimi in cum. Veri tation est eu, singulis accusata ei cum. Partem vituperata eu mel.
        \n \n Movet quidam id per. Habeo ubique detracto in pri, te iusto soluta antiopam mei. Eum no elit nobis soleat, mutat tollit vix ut. Pro ex atomorum conclusionemque, hinc disputationi ut vim. Eam ex decore volutpat, ad vero adipiscing nec. Cu verterem urbanitas vim, per in essent sententiae.
        \n \n Ad per alia fabellas corrumpit, his labore tamquam accusata ne, est clita perpetua ad. Est an ubique comprehensam, id persecuti assueverit nec, sumo singulis cum in. Id quot regione necessitatibus quo, probo viris pertinax pro eu, falli nobis est ex. Et meis audire inermis vim, rebum timeam indoctum nam in, tota aperiam qualisque eos in. In vix alii eripuit invidunt, quo ei malorum ocurreret urbanitas, vim eu nisl oratio option. Mel no libris ridens utroque, euismod deseruisse eos at. \n \n \n </string>


    <!--string ecran9 <=> Despre-->
    <string name="despre_1">Aplicația nuBloca conectează conducătorii auto pentru diverse probleme după numerele de masină. \n \n \n</string>
    <string name="despre_2">\n\nAccesează secțiunea ajutor pentru a afla despre funcționalitațile ei.</string>
    <string name="despre_3"> Ajutor </string>
    <string name="despre_4">pentru a </string>
    <string name="despre_5">afla despre funcționalitațile ei.</string>
    <string name="despre_6">Spune unui prieten</string>

    <!--string ecran10 <=> Contact-->
    <string name="contact__1">Email: contact@nubloca.ro</string>
    <string name="contact__2">Ne puteti contacta si prin formularul de mai jos.</string>
    <string name="contact__3">Nume: </string>
    <string name="contact__4">Telefon: </string>
    <string name="contact__5">E-mail: </string>
    <string name="contact__6">Mesaj: </string>


    <!--string ecran11 <=> Ajutor-->
    <string name="ajutor_1">Cum funcționează nuBloca?</string>
    <string name="ajutor_2">Cum contactez un numar?</string>
    <string name="ajutor_3">Pot trimite mesaje personalizate?</string>
    <string name="ajutor_4">Cum aflu dacă masina mea a fost </string>

    <!--string ecran13 <=> Sfat-->
    <string name="sfat_1">Cum funcționează nuBloca?</string>
    <string name="sfat_2">      An entity is a thing that exists either physically or logically. An entity may be a physical object such as a house
        or a car (they exist physically), an event such as a house sale or a car service, or a concept such as a customer transaction or order
        (they exist logically-as a concept). \n \n      Although the term entity is the one most commonly used, following Chen we should really distinguish
        between an entity and an entity-type. An entity-type is a category. An entity, strictly speaking, is an instance of a given entity-type.
        There are usually many instances of an entity-type. \n \n      Because the term entity-type is somewhat cumbersome, most people tend to use the term
        entity as a synonym for this term. \n \n \n \n</string>

    <!--string ecran16 <=> Autovehiculele tale-->
    <string name="auto_tale_1">TL-01-DST</string>
    <string name="auto_tale_2">24 sesizări, 3 situații</string>

    <!--string ecran20 <=> Contact auto-->
    <string name="contact_1">Către ce numar auto vrei sa trimiți mesajul?</string>
    <string name="contact_2">Tip înmatriculare: </string>
    <string name="contact_3">Permanenta</string>
    <string name="contact_4">Alege alt tip de înmatriculare</string>
    <string name="contact_5">Salut, ai parcat pe locul meu.</string>
    <string name="contact_6">Cum funcționează?</string>
    <string name="contact_7">Istoric numere</string>
    <string name="contact_8">TL</string>
    <string name="contact_9">01</string>
    <string name="contact_10">DST</string>

    <!--string ecran22 <=> Mesaje standard-->
    <string name="mesaje__standard_1">Mașinile mele</string>
    <string name="mesaje__standard_2">Notificări</string>
    <string name="mesaje__standard_3">Istoric conversații</string>
    <string name="mesaje__standard_4">Despre</string>
    <string name="mesaje__standard_5">Mașinile mele</string>
    <string name="mesaje__standard_6">Notificări</string>
    <string name="mesaje__standard_7">Istoric conversații</string>
    <string name="mesaje__standard_8">Despre</string>
    <string name="mesaje__standard_9">Propune un mesaj</string>
    <string name="mesaje__standard_10">Vezi tot</string>

    <!--string ecran23 <=> Tip inmatriculare-->
    <string name="tip_inmatriculare_1">Permanent</string>
    <string name="tip_inmatriculare_2">Temporară</string>
    <string name="tip_inmatriculare_3">Corp Diplomatic</string>
    <string name="tip_inmatriculare_4">Probe</string>
    <string name="tip_inmatriculare_5">Provizorie</string>
    <string name="tip_inmatriculare_6">M.Ap.N.</string>
    <string name="tip_inmatriculare_7">M.A.I.</string>
    <string name="tip_inmatriculare_8">Local</string>
    <string name="tip_inmatriculare_9">Exemplu</string>
    <string name="tip_inmatriculare_10">România</string>


    <!--string ecran24 <=> Istoric numere-->
    <string name="istoric_numere_sterge">Șterge</string>
    <string name="istoric_numere_edit">Edit</string>
    <string name="istoric_numere_1">B 23 GGF</string>
    <string name="istoric_numere_2">TL 87 NGH</string>
    <string name="istoric_numere_3">CD 101 109</string>
    <string name="istoric_numere_4">B 66534</string>
    <string name="istoric_numere_5">Șterge</string>
    <string name="istoric_numere_renunta">Renunță</string>
    <string name="items_selected"> elem.</string>

    <!--string ecran25 <=> Alege Tara-->
    <string name="tara_1">Alege țara:</string>
    <string name="tara_2">România</string>
    <string name="tara_3">Bulgaria</string>

    <!--string ecran26 <=> Exemplu-->
    <string name="exemplu_1">B</string>
    <string name="exemplu_2">225</string>
    <string name="exemplu_3">BGG</string>
    <string name="exemplu_4">TL</string>
    <string name="exemplu_5">01</string>
    <string name="exemplu_6">DST</string>
    <string name="exemplu_7">Tip înmatriculare:</string>
    <string name="exemplu_8">Permanentă</string>

    <!--string ecran27 <=> Mesaj întreg-->
    <string name="mesaj_intreg_1">Salut, ai parcat pe locul meu. Vino te rog și mută mașina.</string>

    <!--string ecran28 <=> Propune mesaj-->
    <string name="propune_mesaj_1">Dacă mesajul pe care vrei să-l trimiţi nu se află în listă, îl poţi propune spre implementare mai jos:</string>
    <string name="propune_mesaj_2">Mesaj:</string>
    <string name="propune_mesaj_3">Trimite</string>
    <string name="propune_mesaj_4">Află mai multe</string>
    <string name="toast_msg">Mesaj Trimis!</string>

    <!--string ecran282 <=> Propune mesaj-->
    <string name="propune_mesaj_282">Multumim pentru implicare! \n \nPropunerea ta va fi analizata, iar daca mesajul va fi implementat, vei fi anuntat pe adresa de email.</string>
    <string name="propune_alt_mesaj_282">Propune alt mesaj</string>

    <!--string ecran282 <=> dialog-->
    <string name="ok_dialog28">OK</string>
    <string name="alerta_dialog28">ALERTA</string>
    <string name="text_dialog28">A intervenit o eroare in trimiterea propunerii, te rugam, incearca din nou.</string>


    <!--string ecran29 <=> Limba aplicatiei-->
    <string name="limba_aplicatie_1">Română</string>
    <string name="limba_aplicatie_2">Engleză</string>
    

    <!--string ecran99 <=> Global Settings(admin)-->
    <string name="title_activity_ecran99">Global Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nu">Nu</string>
    <string name="da">Da</string>
    <string name="blue_car_background">blue car background</string>

</resources>
