<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/btn_white"
    tools:context=".Ecran26Activity"
    tools:showIn="@layout/activity_ecran26"
    android:paddingBottom="40dp">

    <ImageView
        android:id="@+id/car_exemplu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/car_exemplu"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plate"
        android:src="@drawable/plate"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_alignTop="@+id/car_exemplu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/field1"
        android:text="@string/exemplu_1"
        android:textSize="40sp"
        android:layout_alignTop="@+id/plate"
        android:layout_alignLeft="@+id/plate"
        android:layout_alignStart="@+id/plate"
        android:layout_marginStart="30dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/field2"
        android:text="@string/exemplu_2"
        android:textSize="40sp"
        android:layout_alignTop="@+id/plate"
        android:layout_toRightOf="@+id/field1"
        android:layout_toEndOf="@+id/field1"
        android:layout_marginLeft="10dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/field3"
        android:text="@string/exemplu_3"
        android:textSize="40sp"
        android:layout_alignTop="@+id/plate"
        android:layout_toRightOf="@+id/field2"
        android:layout_toEndOf="@+id/field2"
        android:layout_marginLeft="10dp"
        android:textColor="#000000" />

    <ro.nubloca.extras.CustomFontTitilliumBold
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:background="@drawable/plate_border"
        android:layout_marginTop="33dp"
        android:text="@string/exemplu_4"
        android:layout_below="@+id/car_exemplu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:textAlignment="gravity"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/text_layout_custom"
        android:gravity="center_vertical|center" />

    <ro.nubloca.extras.CustomFontTitilliumBold
        android:id="@+id/imageButton1"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:background="@drawable/plate_border"
        android:layout_alignTop="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:text="@string/exemplu_5"
        android:textColor="@color/text_layout_custom"
        android:textSize="35sp"
        android:textAlignment="gravity"
        android:gravity="center_vertical|center" />

    <ro.nubloca.extras.CustomFontTitilliumBold
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:background="@drawable/plate_border"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:text="@string/exemplu_6"
        android:textColor="@color/text_layout_custom"
        android:textSize="35sp"
        android:textAlignment="gravity"
        android:gravity="center_vertical|center" />


    <ro.nubloca.extras.CustomFontTitilliumRegular
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exemplu_7"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="19dp" />

    <ro.nubloca.extras.CustomFontTitilliumBold
        android:id="@+id/nume_tip_inmatriculare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView20"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/textView20"
        android:layout_toRightOf="@+id/textView20"
        android:text="@string/exemplu_8"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="19sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nume_tip_inmatriculare"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/nume_tip_inmatriculare"
        android:layout_toRightOf="@+id/nume_tip_inmatriculare"
        android:background="@drawable/ro_flag" />


</RelativeLayout>
