<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/marginLeftRight_dialog"
    android:layout_marginRight="@dimen/marginLeftRight_dialog"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ro.nubloca.extras.CustomFontTitilliumRegular
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginTopBotText1_dialog"
            android:layout_marginTop="@dimen/marginTopBotText1_dialog"
            android:textAlignment="center"
            android:text="@string/alerta_dialog28"
            android:textColor="@color/textColor_dialog"
            android:textSize="@dimen/textSize_dialog" />

        <ro.nubloca.extras.CustomFontTitilliumRegular
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeftRightText_dialog"
            android:layout_marginRight="@dimen/marginLeftRightText_dialog"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_dialog28"
            android:textColor="@color/textColor1_dialog"
            android:textSize="@dimen/textSize_dialog" />

        <ro.nubloca.extras.CustomFontTitilliumBold
            android:id="@+id/button"
            android:layout_width="@dimen/widthBox_dialog"
            android:layout_height="@dimen/heightBox_dialog"
            android:background="@drawable/acord_btn"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginTop="@dimen/marginTopBox_dialog"
            android:layout_marginBottom="@dimen/marginBotBox_dialog"
            android:text="@string/ok_dialog28"
            android:textColor="@color/btn_white"
            android:textSize="@dimen/textSizeBox_dialog" />

    </LinearLayout>
</RelativeLayout>
