<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Ecran4Activity"
    tools:showIn="@layout/activity_ecran4">

    <ro.nubloca.CustomFontTitilliumRegular
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:paddingTop="35dp"
        android:text="@string/tos_text2"
        android:textColor="@color/tos_text_color"
        android:textSize="19sp" />

    <ro.nubloca.CustomFontTitilliumBold
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/acord_btn"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/vezi_termeni"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:clickable="true" />

    <ro.nubloca.CustomFontTitilliumBold
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginRight="30dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/refuz_btn"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/inchide_app"
        android:textAllCaps="false"

        android:textColor="#ffffff"
        android:textSize="22sp"
        android:clickable="true" />
</RelativeLayout>


