<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customAttrs="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg_setari"
    android:fitsSystemWindows="true"
    tools:context=".Ecran24Activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:clickable="true"
                android:visibility="gone"
                android:background="@drawable/abc_btn_yellow" />

            <ro.nubloca.extras.CustomFontTitilliumRegular
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_activity_ecran24"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/size_title" />

            <ro.nubloca.extras.CustomFontTitilliumBold
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingEnd="@dimen/marginRight_stergeEcran24"
                android:paddingRight="@dimen/marginRight_stergeEcran24"
                android:text="@string/istoric_numere_edit"
                android:textColor="@color/ecran24edit"
                android:visibility="gone"
                android:textSize="@dimen/size_title" />

            <ro.nubloca.extras.CustomFontTitilliumBold
                android:id="@+id/sterge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingEnd="@dimen/marginRight_stergeEcran24"
                android:paddingRight="@dimen/marginRight_stergeEcran24"
                android:text="@string/istoric_numere_sterge"
                android:textColor="@color/ecran24sterge"
                android:visibility="gone"
                android:textSize="@dimen/size_title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_ecran24" />

</android.support.design.widget.CoordinatorLayout>
